# ta

./: .gitignore
hw0/: CMakeLists.txt  main.c  map.c  wc.c
hw1/: CMakeLists.txt  Makefile  shell.c  tokenizer.c  tokenizer.h
hw2/: CMakeLists.txt  Makefile
hw3/: CMakeLists.txt  Makefile
